# api-receitas

./: Makefile  README.md  db.json  pyproject.toml
recipes/: main.py
recipes/core/: config.py
recipes/db/: mongo.py
recipes/schemas/: base.py  recipe.py  user.py
tests/: conftest.py  factories.py
tests/schemas/: test_recipes.py  test_user.py
