[tool.poetry]
name = "api-cardapio"
version = "0.0.1"
description = ""
authors = ["estelaoliveiradev <estelaoliveirareato23@outlook.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.2"
uvicorn = "^0.32.0"
taskipy = "^1.13.0"
pytest = "^8.3.3"
ruff = "^0.6.9"
mk = "^2.7.0"
mkdocs = "^1.6.1"
motor = "^3.6.0"
pytest-asyncio = "^0.24.0"
pre-commit = "^4.0.1"
pydantic = "^2.9.2"
pydantic-settings = "^2.6.0"
email-validator = "^2.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
